--- a/index.html
+++ b/index.html
@@ -18,19 +18,26 @@
     <h1> TARDIS-Con 2023</h1><br>
 
 
-    <img src="tardis-logo-2.svg" alt="tardis logo" height="200" width="200" /><br>
+    <img src="tardis-logo-2.svg" alt="tardis logo" height="200" /><br>
 
     <big>Collaboration, Open Science, Algorithms, and Astrophysics</big><br>
     <big>Michigan State University, East Lansing</big>
     <big>7/10/2023 - 7/23/2023</big><br>
     
+Welcome to TARDIS-Con 2023, an unconference-style conference focused on open science code and astrophysics. We believe that collaboration and open-source development are key to advancing the field of astrophysics and we are excited to bring together researchers and students from many disciplines such as astrophysics, software engineering, machine learning, natural language processing, etc.
+
+At TARDIS-Con 2023, we will be providing a platform for participants to come together and share their knowledge, expertise, and ideas. Our aim is to create an open and inclusive space where attendees can work collaboratively on scientific code, tools, and techniques, with a particular focus on the TARDIS code for astrophysical spectroscopy.
+
+Throughout the conference, attendees will have the opportunity to participate in a range of interactive sessions, including unconference sessions, code sprints, and lightning talks. These sessions will provide a unique opportunity to network with like-minded individuals, share ideas and best practices, and learn new skills and techniques.
+
+We hope that TARDIS-Con 2023 will be a truly immersive and collaborative experience, where participants can work together to drive forward the development of open science code in astrophysics. We look forward to seeing you there!
     <hr>
 
 
     </center>
 
     Fun times for all!
-    <img src="IMG_2621.jpg" alt="Wolfgang on the throne" height="1000" width="1000"\z>
+    <img src="IMG_2621.jpg" alt="Wolfgang on the throne" width="1000"\z>
    
     
   </body>
