--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                         
                         <div class="header-content text-center">
                             <h2 class="header-title">TARDIS-Con 2023</h2>
+                            <h4 class="text-white">10th July - 21st of July 2023</h2>
                             <h3 class="sub-title">TARDIS-Con 2023 is an unconference-style conference focused on open science code and astrophysics. We believe that collaboration and open-source development are key to advancing the field of astrophysics and we are excited to bring together researchers and students from many disciplines such as astrophysics, software engineering, machine learning, and natural language processing.</h3>
 
                             <ul class="header-btn">
@@ -150,7 +151,7 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-20">
                         <h2 class="title">Why You Should Join?</h2>
-                        <p class="text">Lorem ipsum dolor sit amet, in quodsi vulputate pro. Ius illum vocent mediocritatem reiciendis odit sed, vero amet blanditiis cule dicta iriure at phaedrum.</p>
+                        <p class="text">We will be providing a platform for participants to come together and share their knowledge, expertise, and ideas. Our aim is to create an open and inclusive space where attendees can work collaboratively on scientific code, tools, and techniques.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
