--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>TARDIS-Con 2023</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/tardis-logo-2.svg" type="image/png">
 
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
