--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
                             <h3 class="text-white">TARDIS-Con 2023 is an unconference-style conference focused on open science code and astrophysics. We believe that collaboration and open-source development are key to advancing the field of astrophysics and we are excited to bring together researchers and students from many disciplines such as astrophysics, software engineering, machine learning, and natural language processing.</h3>
 
                             <ul class="header-btn">
+                            <!--
                                 <li><a class="main-btn main-btn-2" href="https://rebrand.ly/eventify-gg" rel="nofollow">Purchase Now</a></li>
                                 <li><a class="main-btn" href="https://rebrand.ly/eventify-gg" rel="nofollow">Learn More</a></li>
+                            -->
                             </ul>
                         </div>  <!-- header content -->
                     </div>
@@ -224,6 +226,10 @@
                 </div>
             </div> <!-- row -->
         </div> <!-- container -->
+        <div class="section-title text-center pb-20">
+            <p class="text">In addition to these projects, we will have many other opportunities for participants to work collaboratively on open science code in astrophysics. These include projects focused on machine learning, natural language processing, and other cutting-edge techniques. By working together and sharing our knowledge and expertise, we hope to drive forward the development of open science code and advance our understanding of the universe.</p>
+        </div> <!-- section title -->
+
     </section>
 
 
