--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         
                         <div class="header-content text-center">
                             <h2 class="header-title">TARDIS-Con 2023</h2>
-                            <h4 class="text-white">10th July - 21st of July 2023</h2>
+                            <h4 class="text-white">10th July - 21st of July 2023 at Michigan State University</h2>
                             <div class="col-xs-12" style="height:50px;"></div>
                             <h3 class="text-white">TARDIS-Con 2023 is an unconference-style conference focused on open science code and astrophysics. We believe that collaboration and open-source development are key to advancing the field of astrophysics and we are excited to bring together researchers and students from many disciplines such as astrophysics, software engineering, machine learning, and natural language processing.</h3>
 
