add location and invited talk

--- a/index.html
+++ b/index.html
@@ -120,10 +120,12 @@
                         
                         <div class="header-content text-center">
                             <h2 class="header-title">TARDIS-Con 2023</h2>
-                            <h4 class="text-white">10th July - 21st of July 2023 at Michigan State University</h2>
+                            <h4 class="text-white">10th July - 21st of July 2023</h4>
+                            <h4 class="text-white">at Michigan State University, East Lansing, USA</h4>
                             <div class="col-xs-12" style="height:50px;"></div>
                             <h3 class="text-white">TARDIS-Con 2023 is an unconference-style conference focused on open science code and astrophysics. We believe that collaboration and open-source development are key to advancing the field of astrophysics and we are excited to bring together researchers and students from many disciplines such as astrophysics, software engineering, machine learning, and natural language processing.</h3>
 
+                            <h4 class="text-white">Invited talk: Bayesian inference with UltraNest, Johannes Buchner, Wednesday July 19th 10:00 </h4>
                             <ul class="header-btn">
                             <!--
                                 <li><a class="main-btn main-btn-2" href="https://rebrand.ly/eventify-gg" rel="nofollow">Purchase Now</a></li>
