--- a/all_events/2023.html
+++ b/all_events/2023.html
@@ -10,31 +10,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>TARDIS-Con 2024</title>
+    <title>TARDIS-Con 2023</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/tardis-logo-2.svg" type="image/png">
+    <link rel="shortcut icon" href="../assets/images/tardis-logo-2.svg" type="image/png">
 
     <!--====== Bootstrap css ======-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 
     <!--====== Flaticon css ======-->
-    <link rel="stylesheet" href="assets/css/flaticon.css">
+    <link rel="stylesheet" href="../assets/css/flaticon.css">
 
     <!--====== Line Icons css ======-->
-    <link rel="stylesheet" href="assets/css/LineIcons.css">
+    <link rel="stylesheet" href="../assets/css/LineIcons.css">
 
     <!--====== Animate css ======-->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="../assets/css/animate.css">
 
     <!--====== Slick css ======-->
-    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="../assets/css/slick.css">
 
     <!--====== Default css ======-->
-    <link rel="stylesheet" href="assets/css/default.css">
+    <link rel="stylesheet" href="../assets/css/default.css">
 
     <!--====== Style css ======-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
 
 </head>
@@ -71,7 +71,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/tardis-logo-2-white.svg" width=80px alt="Logo">
+                                <img src="../assets/images/tardis-logo-2-white.svg" width=80px alt="Logo">
                             </a>
 
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
@@ -112,18 +112,18 @@
             </div> <!-- container -->
         </div>
 
-        <div id="home" class="header-content-area bg_cover d-flex align-items-center" style="background-image: url(assets/images/SN1994D.jpg)">
+        <div id="home" class="header-content-area bg_cover d-flex align-items-center" style="background-image: url(../assets/images/SN1994D.jpg)">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
-                        <div data-countdown="2024/07/10"></div>
+                        <div data-countdown="2023/07/10"></div>
                         
                         <div class="header-content text-center">
-                            <h2 class="header-title">TARDIS-Con 2024</h2>
-                            <h4 class="text-white">10th July - 21st of July 2024</h4>
+                            <h2 class="header-title">TARDIS-Con 2023</h2>
+                            <h4 class="text-white">10th July - 21st of July 2023</h4>
                             <h4 class="text-white">at Michigan State University, East Lansing, USA</h4>
                             <div class="col-xs-12" style="height:50px;"></div>
-                            <h3 class="text-white">TARDIS-Con 2024 is an unconference-style conference focused on open science code and astrophysics. We believe that collaboration and open-source development are key to advancing the field of astrophysics and we are excited to bring together researchers and students from many disciplines such as astrophysics, software engineering, machine learning, and natural language processing.</h3>
+                            <h3 class="text-white">TARDIS-Con 2023 is an unconference-style conference focused on open science code and astrophysics. We believe that collaboration and open-source development are key to advancing the field of astrophysics and we are excited to bring together researchers and students from many disciplines such as astrophysics, software engineering, machine learning, and natural language processing.</h3>
 
                             <h4 class="text-white">Invited talk: Bayesian inference with UltraNest, Johannes Buchner, Wednesday July 19th 10:00 </h4>
                             <ul class="header-btn">
@@ -186,7 +186,7 @@
                         </div>
                         <div class="features-content">
                             <h4 class="features-title"><a href="#">Carsus</a></h4>
-                            <p class="text">At TARDIS-Con 2024, we will also be focusing on the Carsus project, an atomic structure database that provides input to radiative transfer codes. Our goals include expanding its capabilities by including additional databases, such as the Vienna Atomic Line Database (VALD), and exploring how different databases impact the spectra generated. We will also be working on visualizations, such as Grotrian diagrams, to better understand the complex atomic processes involved in astrophysical simulations. By improving the accuracy and reliability of radiative transfer simulations through the Carsus project, we hope to advance our understanding of the universe.</p>
+                            <p class="text">At TARDIS-Con 2023, we will also be focusing on the Carsus project, an atomic structure database that provides input to radiative transfer codes. Our goals include expanding its capabilities by including additional databases, such as the Vienna Atomic Line Database (VALD), and exploring how different databases impact the spectra generated. We will also be working on visualizations, such as Grotrian diagrams, to better understand the complex atomic processes involved in astrophysical simulations. By improving the accuracy and reliability of radiative transfer simulations through the Carsus project, we hope to advance our understanding of the universe.</p>
                         </div>
                     </div> <!-- single features -->
                 </div>
@@ -295,36 +295,36 @@
 
 
     <!--====== jquery js ======-->
-    <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="../assets/js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
 
     <!--====== Bootstrap js ======-->
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script>
 
     <!--====== Counter Up js ======-->
-    <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
+    <script src="../assets/js/waypoints.min.js"></script>
+    <script src="../assets/js/jquery.counterup.min.js"></script>
 
     <!--====== Slick js ======-->
-    <script src="assets/js/slick.min.js"></script>
+    <script src="../assets/js/slick.min.js"></script>
 
     <!--====== Magnific Popup js ======-->
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
 
     <!--====== Scrolling Nav js ======-->
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/scrolling-nav.js"></script>
+    <script src="../assets/js/jquery.easing.min.js"></script>
+    <script src="../assets/js/scrolling-nav.js"></script>
 
     <!--====== Countdown js ======-->
-    <script src="assets/js/jquery.countdown.min.js"></script>
+    <script src="../assets/js/jquery.countdown.min.js"></script>
 
     <!--====== wow js ======-->
-    <script src="assets/js/wow.min.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
 
 
     <!--====== Main js ======-->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 
